--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-088-030-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-030-14">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-030-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-088-030-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-088-030"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +101,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:52:33.569Z" type="text-version" status="0.0.12" xml:id="UT22084-088-030-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:53:06.073Z" type="text-version" status="0.0.13" xml:id="UT22084-088-030-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T13:56:34.832Z" type="translation-status" status="2.a" xml:id="UT22084-088-030-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T13:56:34.832Z" type="text-version" status="0.0.14" xml:id="UT22084-088-030-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
