--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -15,13 +15,14 @@
                 <author role="translatorEng" xml:id="UT22084-088-031-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-031-14">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-031-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-088-031-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-088-031"/>
                 <date/>
             </publicationStmt>
@@ -102,6 +103,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:50:52.098Z" type="text-version" status="0.0.12" xml:id="UT22084-088-031-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:51:23.929Z" type="text-version" status="0.0.13" xml:id="UT22084-088-031-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T13:58:10.254Z" type="translation-status" status="2.a" xml:id="UT22084-088-031-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T13:58:10.254Z" type="text-version" status="0.0.14" xml:id="UT22084-088-031-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
