--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -16,12 +16,12 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-088-032-34">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-088-032"/>
                 <date/>
             </publicationStmt>
@@ -112,6 +112,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-06T10:36:22.596Z" type="text-version" status="0.0.15" xml:id="UT22084-088-032-36">
                     <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T13:59:13.116Z" type="translation-status" status="2.a" xml:id="UT22084-088-032-37">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T13:59:13.116Z" type="text-version" status="0.0.16" xml:id="UT22084-088-032-38">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
