--- a/translations/kangyur/translations/041-003_toh58-the_teaching_to_venerable_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/translations/041-003_toh58-the_teaching_to_venerable_nanda_on_entering_the_womb.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-041-003-340">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.11 <date>2024</date>
+                <edition>v 1.1.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -225,12 +225,15 @@
                 <change who="#andre" when="2024-06-28T15:52:27.7Z" type="text-version" status="1.1.11" xml:id="UT22084-041-003-393">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
+                <change who="#konchog" when="2024-07-09T00:14:23.028Z" type="text-version" status="1.1.12" xml:id="UT22084-041-003-394">
+                    <desc>First round of adjustments, comparing to and syncing with Toh 57.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
         <front>
-            <div type="summary">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-041-003-1"/>
                 <p tid="2">In <title xml:lang="en">The Teaching to Venerable Nanda on Entry into the
@@ -242,18 +245,18 @@
                     over the course of a lifetime. Including as it does the most comprehensive
                     ancient Indian account of gestation, it was an important source for embryology
                     in Tibetan medicine.</p>
-            </div>
-            <div type="acknowledgment">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-041-003-2"/>
                 <p tid="4">This translation was produced by Robert Kritzer, who also wrote the
                     introduction.</p>
                 <p tid="5">The translation was completed under the patronage and supervision of
                     84000: Translating the Words of the Buddha.</p>
-            </div>
-            <div type="introduction">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction">
                 <head type="introduction" tid="6">Introduction</head>
-                <div type="section" xml:id="UT22084-041-003-introduction-1">
+                <tei:div type="section" xml:id="UT22084-041-003-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-041-003-3"/>
                     <p tid="8">
                         <title xml:lang="Sa-Ltn">The Garbhāvakrānti­sūtra</title>, <title xml:lang="en">The Sūtra on Entry into the Womb</title>, describes the
@@ -338,7 +341,7 @@
                         their content, these six surviving Chinese and Tibetan versions fall into
                         two main groups: shorter versions that consist of the Buddha’s teaching to
                         his younger half-brother Nanda on the subject of conception, gestation, and
-                        childbirth; and longer versions that also provide a frame narrative
+                        childbirth, and longer versions that also provide a frame narrative
                         explaining that the teaching was given because Nanda, infatuated with his
                         wife, had been reluctant to take monk’s vows and needed to be convinced by
                         the Buddha. As well as adding much material not specifically related to
@@ -351,25 +354,25 @@
                         early fourth century by Dharmarakṣa (Taishō 317) and does not appear to have
                         been translated into Tibetan. The later of these short-version translations
                         was made in the early eighth century by Bodhiruci as part of the Ratnakūṭa
-                        collection, and it is his Chinese translation (Taishō 310–13) that was the
+                        collection, and it is his Chinese translation (Taishō 310–313) that was the
                         source for the ninth-century translation into Tibetan as part of the Tibetan
                         Ratnakūṭa—the text (Toh 58) translated here. </p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-19"/>
                     <p tid="17">There are also two different long versions. One was translated into
-                        Chinese in the early eighth century by Yijing as part of his translation of
-                        the Chinese <title xml:lang="Sa-Ltn">Mūla­sarvāstivāda­vinaya</title>
-                        (Taishō 1451). According to the Chinese catalog, <title xml:lang="Zh-Ltn">Kaiyuan shijiao lu</title>
+                        Chinese in the early eighth century by Yijing (Taishō 1451) as part of his translation into
+                        Chinese of the Mūla­sarvāstivāda Vinaya.
+                        According to the Chinese catalog, <title xml:lang="Zh-Ltn">Kaiyuan shijiao lu</title>
                         <title xml:lang="zh">開元釋教錄</title> (Taishō 2154.585c15–19), Bodhiruci
-                        inserted Yijing’s translation from the <title xml:lang="Sa-Ltn">Mūla­sarvāstivāda­vinaya</title> into the Chinese Ratnakūṭa collection
-                        (Taishō 310–14). This translation was, in turn, the source for the
+                        inserted Yijing’s translation from the Mūla­sarvāstivāda Vinaya into the Chinese Ratnakūṭa collection
+                        (Taishō 310–314). This translation was, in turn, the source for the
                         translation in the Tibetan Ratnakūṭa (Toh 57)<ref rend="pending" target="https://read.84000.co/translation/toh57.html"/><!--add note-->,
                         the text immediately preceding the present one in the Kangyur. The second
                         long version does not exist in Chinese and is not an independent sūtra but
                         is found embedded, like many other passages that may originally have also
-                        circulated independently, in the <title xml:lang="Sa-Ltn">Mūla­sarvāstivāda­vinaya</title>, specifically in the <title xml:lang="Sa-Ltn">Kṣudrakavastu</title> (Toh 6)<ref rend="pending" target="https://read.84000.co/translation/toh6.html"/><!--add note; link to ff. 124.b–153.a-->. The Tibetan of the <title xml:lang="Sa-Ltn">Kṣudrakavastu</title> was translated directly from the
+                        circulated independently, in the Mūla­sarvāstivāda Vinaya, specifically in the <title xml:lang="Sa-Ltn">Kṣudrakavastu</title> (<title xml:lang="en">The Chapter on Minor Matters of Monastic Discipline</title>, Toh 6)<ref rend="pending" target="https://read.84000.co/translation/toh6.html"/><!--add note; link to ff. 124.b–153.a-->. The Tibetan of the <title xml:lang="Sa-Ltn">Kṣudrakavastu</title> was translated directly from the
                         Sanskrit in the ninth century, and the passage within it that contains this
                         teaching therefore differs somewhat from the corresponding passage in
-                        Yijing’s translation in the Chinese <title xml:lang="Sa-Ltn">Mūla­sarvāstivāda­vinaya</title> (Taishō 1451).</p>
+                        Yijing’s translation (Taishō 1451) in the Chinese Mūla­sarvāstivāda Vinaya.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-20"/>
                     <p tid="18">To reiterate, there is one Chinese translation of one of the two
                         short versions of the text, one Chinese translation of the second short
@@ -408,7 +411,7 @@
                             (q.v. folio 9.a) has the titles in the same order as the Chinese but
                             gives them the equal length of two <foreign xml:lang="Bo-Ltn" type="term">bam po</foreign>.</note> Presumably as a result of these
                         early lists, some Kangyurs, including the Degé, also include the two texts
-                        in the Ratnakūṭa in the same reverse order, calling <title xml:lang="Bo-Ltn">mngal du ’jug pa</title> (Toh 58), which is Chapter Thirteen in the
+                        in the Ratnakūṭa in the same reverse order, calling <title xml:lang="Bo-Ltn">mngal du ’jug pa</title> (Toh 58), which is chapter 13 in the
                         Chinese Ratnakūṭa, “Chapter Fourteen,” and <title xml:lang="Bo-Ltn">mngal du
                             gnas pa </title>(Toh 57), which is Chapter Fourteen in the Chinese
                         Ratnakūṭa, “Chapter Thirteen.”<note place="end" xml:id="UT22084-041-003-24">
@@ -416,8 +419,8 @@
                             in this way are the Cone, Lithang, and Urga Kangyurs, but in the
                             Qianlong, Narthang, Lhasa, and Stok Palace Kangyurs, as well as in the
                             Mongolian Kangyur, the order reflects that of the Chinese
-                            Ratnakūṭa.</note> To avoid confusion, I hereafter refer to these two
-                        translations as Toh 57 and Toh 58. Furthermore, in both the title and the
+                            Ratnakūṭa.</note> To avoid confusion, these two
+                        translations are hereafter referred to as Toh 57 and Toh 58. Furthermore, in both the title and the
                         body of <title xml:lang="Zh-Ltn">Chutai hui</title>, the interlocutor is
                         called Ānanda. In Toh 58, he is always Nanda. There are some differences
                         between Toh 58 and <title xml:lang="Zh-Ltn">Chutai hui</title> and between
@@ -465,7 +468,7 @@
                             <cell>
                                 <title xml:lang="Zh-Ltn">Baotai jing</title>
                                 <title xml:lang="zh">胞胎經</title>, Taishō 317</cell>
-                            <cell>Dharmarakṣa (<foreign xml:lang="Zh-Ltn">Zhu Fahu</foreign>
+                            <cell>Dharmarakṣa (Zhu Fahu
                                 <foreign xml:lang="zh">竺法護</foreign>)</cell>
                             <cell>281 or 303</cell>
                         </row>
@@ -474,7 +477,7 @@
                                 <title xml:lang="Zh-Ltn">Chutai hui</title>
                                 <title xml:lang="zh">處胎會</title> (Full title: <title xml:lang="Zh-Ltn">Fo wei Anan shuo chutai hui</title>
                                 <title xml:lang="zh">佛爲阿難説處胎會</title>) (<title xml:lang="Sa-Ltn">Ratnakūṭasūtra</title>, Taishō 310 [13])</cell>
-                            <cell>Bodhiruci (<foreign xml:lang="Zh-Ltn">Putiliuzhi</foreign>
+                            <cell>Bodhiruci (Putiliuzhi
                                 <foreign xml:lang="zh">菩提流志</foreign>)</cell>
                             <cell>703–13</cell>
                         </row>
@@ -485,7 +488,7 @@
                                     <title xml:lang="Bo-Ltn">tshe dang ldan pa dga’ bo la mngal du
                                     ’jug pa bstan pa</title>) (Translation of <title xml:lang="Zh-Ltn">Chutai hui</title>), Toh 58 (dkon brtsegs,
                                 ga)</cell>
-                            <cell>Chödrup (<foreign xml:lang="Bo-Ltn">chos grub</foreign>) (<foreign xml:lang="Zh-Ltn">Facheng</foreign>
+                            <cell>Chödrup (chos grub) (Facheng
                                 <foreign xml:lang="zh">法成</foreign>)</cell>
                             <cell>ninth cent.</cell>
                         </row>
@@ -503,8 +506,8 @@
                             <cell>
                                 <title xml:lang="Zh-Ltn">Rutai jing</title> (Full title: <title xml:lang="Zh-Ltn">Foshuo ru taizang hui</title>
                                 <title xml:lang="zh">佛説入胎藏會)</title> (<title xml:lang="Sa-Ltn">Ratnakūṭasūtra</title>, Taishō 310 [14], originally translated
-                                in <title xml:lang="Sa-Ltn">Mūla­sarvāstivāda­vinaya
-                                    Kṣudraka­vastu</title> [Taishō 1451: 251a14–262a19], from which
+                                in the Mūla­sarvāstivāda Vinaya
+                                <title xml:lang="Sa-Ltn">Kṣudraka­vastu</title> [Taishō 1451: 251a14–262a19], from which
                                 it was extracted and introduced into the Ratnakūṭa as a separate
                                 chapter)</cell>
                             <cell>Yijing <foreign xml:lang="zh">義淨</foreign>
@@ -527,22 +530,22 @@
                         <row>
                             <cell>
                                 <title xml:lang="Bo-Ltn">mngal du ’jug pa zhes bya ba’i chos kyi
-                                    rnam grangs</title> (found in the Tibetan <title xml:lang="Sa-Ltn">Mūla­sarvāstivāda­vinaya
-                                    Kṣudraka­vastu</title>), Toh 6 (’dul ba, tha)</cell>
-                            <cell>Vidyākaraprabha, Dharmaśrībhadra, and Paljor (<foreign xml:lang="Bo-Ltn">dpal ’byor</foreign>)</cell>
+                                    rnam grangs</title> (found in the Tibetan Mūla­sarvāstivāda Vinaya
+                                <title xml:lang="Sa-Ltn">Kṣudraka­vastu</title>), Toh 6 (’dul ba, tha)</cell>
+                            <cell>Vidyākaraprabha, Dharmaśrībhadra, and Paljor (dpal ’byor)</cell>
                             <cell>ninth cent.</cell>
                         </row>
                     </table>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </front>
         <body>
-            <div type="translation">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation">
                 <head type="translation"> The Translation </head>
                 <head type="titleHon" tid="23">The Noble Great Vehicle Sūtra</head>
                 <head type="titleMain" tid="24">The Teaching to Venerable Nanda on Entry into the
                     Womb</head>
-                <div type="section" xml:id="UT22084-041-003-section-1">
+                <tei:div type="section" xml:id="UT22084-041-003-section-1">
                     <milestone unit="chunk" xml:id="UT22084-041-003-31"/>
                     <p tid="25">
                         <ref cRef="F.237.a" type="folio" xml:id="UT22084-041-003-292"/>
@@ -1417,17 +1420,17 @@
                             Nanda on Entry into the Womb</title>, the fourteenth of the one hundred
                         thousand sections of the Dharma discourse known as The Noble Great Heap of
                         Jewels.</trailer>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </body>
         <back>
-            <div type="notes">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes">
                 <head type="notes" tid="113">Notes</head>
-            </div>
-            <div type="listBibl">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl">
                 <head type="listBibl" tid="115">Bibliography</head>
 
-                <div type="section" xml:id="UT22084-041-003-listBibl-2">
+                <tei:div type="section" xml:id="UT22084-041-003-listBibl-2">
                     <head type="section" tid="117">Tibetan Sources</head>
                     <bibl xml:id="UT22084-041-003-145">
                         <title xml:lang="Bo-Ltn">mngal du ’jug pa</title>. Toh 58, Degé Kangyur vol.
@@ -1495,8 +1498,8 @@
                     <bibl xml:id="UT22084-041-003-327">Phangthangma (<title xml:lang="Bo-Ltn">dkar
                             chag ’phang thang ma</title>). Beijing: mi rigs dpe skrun khang,
                         2003.</bibl>
-                </div>
-                <div type="section" xml:id="UT22084-041-003-listBibl-1">
+                </tei:div>
+                <tei:div type="section" xml:id="UT22084-041-003-listBibl-1">
                     <head type="section" tid="116">Chinese Sources</head>
                     <bibl xml:id="UT22084-041-003-147">
                         <title xml:lang="Zh-Ltn">Baotai jing</title>
@@ -1518,9 +1521,9 @@
                         (Full title: <title xml:lang="Zh-Ltn">Foshuo ru taizang hui</title>
                         <title xml:lang="zh">佛説入胎藏會</title>). Taishō 310 [14]. (Translation of
                             <title xml:lang="Sa-Ltn">Garbhāvakrānti­sūtra</title> by Yijing <foreign xml:lang="zh">義淨</foreign>.)</bibl>
-                </div>
+                </tei:div>
 
-                <div type="section" xml:id="UT22084-041-003-listBibl-3">
+                <tei:div type="section" xml:id="UT22084-041-003-listBibl-3">
                     <head type="section" tid="118">Secondary sources</head>
                     <bibl xml:id="UT22084-041-003-321">Dharmachakra Translation Committee, trans.
                         (2013). <title xml:lang="en">
@@ -1594,11 +1597,11 @@
                         Toh 11). 84000: Translating the Words of the Buddha, 2018.</bibl>
                     <bibl xml:id="UT22084-041-003-165">Ueyama Daishun <foreign xml:lang="zh">上山大峻</foreign>. “Dai bankoku daitoku sanzō hōshi shamon Hōjō no kenkyū
                         (jō)” <title xml:lang="ja">大蕃國大徳三蔵法師沙門法成の研究（上)</title>. <title xml:lang="Ja-Ltn">Tōhō gakuhō</title> 38 (1967): 133–98.</bibl>
-                </div>
-            </div>
-            <div type="appendix">
+                </tei:div>
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="appendix">
                 <head type="appendix" tid="121">Outline of the Garbhāvakrāntisūtra</head>
-                <div type="section" xml:id="UT22084-041-003-appendix-1">
+                <tei:div type="section" xml:id="UT22084-041-003-appendix-1">
                     <milestone unit="chunk" xml:id="UT22084-041-003-291"/>
                     <!--<list type="bullet">
                         <item><p tid="122"><ptr target="#UT22084-041-003-1">Summary</ptr></p></item>
@@ -1759,9 +1762,9 @@
                     <!--<item><p>Notes</p></item>
                         <item><p>Glossary</p></item>
                         <item><p>Bibliography</p></item>-->
-                </div>
-            </div>
-            <div type="glossary">
+                </tei:div>
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-041-003-166">
@@ -3335,7 +3338,7 @@
                         </gloss>
                     </item>
                 </list>
-            </div>
+            </tei:div>
         </back>
     </text>
 </TEI>
