--- a/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
@@ -6,23 +6,23 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Essence of the Six
                     Perfections</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn"/>
                 <title type="mainTitle" xml:lang="bo">ཕ་རོལ་ཏུ་ཕྱིན་པ་དྲུག་གི་སྙིང་པོའི་གཟུངས།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po’i
                     gzungs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi gzungs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi snying po’i
                     gzungs</title>
-                <author role="translatorMain" xml:id="UT22084-090-023-1">84000 Associate
-                    Translators</author>
+                <author role="translatorMain" xml:id="UT22084-090-023-1"><!--84000 Associate
+                    Translators--></author>
                 <author role="translatorEng" xml:id="UT22084-090-023-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-023-13">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-023-23">Dawn Collins</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-023-35">Sameer Dhingra</editor>
                 <editor role="projectEditor" xml:id="UT22084-090-023-36">Andreas Doctor</editor>
+                <editor role="finalReviewer" xml:id="UT22084-090-023-79">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -43,7 +43,7 @@
                 <idno xml:id="UT22084-090-023"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-04-04</date>
+                <date>2024-07-09</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh579" type="text">
@@ -145,6 +145,15 @@
                 <change who="#line-tofte" when="2024-05-06T14:25:29.304Z" type="text-version" status="0.0.4" xml:id="UT22084-090-023-72">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-07-04T12:06:57.161Z" type="text-version" status="0.0.5" xml:id="UT22084-090-023-80">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-09T08:00:49.695Z" type="translation-status" status="1.a" xml:id="UT22084-090-023-81">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#sameer" when="2024-07-09T08:00:49.695Z" type="text-version" status="1.0.0" xml:id="UT22084-090-023-82">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -231,7 +240,7 @@
                             <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT AND REMOVE THE <p> ELEMENT-->
                             <p key="toh579">Note that there is a discrepancy among various databases
                                 for cataloging the Toh 935 version of this text within vol. 100 or
-                                101 of the Degé Kangyur. See Toh 935, <ref target="https://read.84000.co/translation/toh935.html#end-note-UT22084-090-023-68">note 2</ref>, for details.</p>
+                                101 of the Degé Kangyur. See Toh 935, <ptr target="toh935.html#UT22084-090-023-68"/>, for details.</p>
                             <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                         </note> No previous translation of this text into a language outside the
                         Tibetan sphere of influence is known. Meisezahl (1957) provides a diplomatic
@@ -270,7 +279,7 @@
                         </mantra>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-023-51"/>
-                    <p tid="19">By taking this up, one will retain the six perfections and emptiness
+                    <p tid="19">By taking this up, one will retain the six perfections, and emptiness
                         will have been established in one’s mind. When one verbally recites this
                         constantly, one will understand all the aphoristic and extensive
                             teachings,<note place="end" xml:id="UT22084-090-023-52"> Or, “the
