--- a/translations/kangyur/translations/090-024_toh580,936-the_dharani_for_retaining_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-024_toh580,936-the_dharani_for_retaining_the_six_perfections.xml
@@ -6,22 +6,23 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Retaining the Six
                     Perfections</title>
+                <title type="mainTitle" xml:lang="bo">ཕ་རོལ་ཏུ་ཕྱིན་པ་དྲུག་གཟུང་བར་འགྱུར་བའི་གཟུངས།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gzung bar ’gyur
                     ba’i gzungs</title>
-                <title type="mainTitle" xml:lang="bo">ཕ་རོལ་ཏུ་ཕྱིན་པ་དྲུག་གཟུང་བར་འགྱུར་བའི་གཟུངས།</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phyin drug bzung ba’i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gzung ba’i
                     gzungs/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phyin drug bzung ba’i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-024-1">84000 Associate
-                    Translators</author>
+                <author role="translatorMain" xml:id="UT22084-090-024-1"><!--84000 Associate
+                    Translators--></author>
                 <author role="translatorEng" xml:id="UT22084-090-024-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-024-13">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-024-23">Dawn Collins</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-024-33">Sameer Dhingra</editor>
                 <editor role="projectEditor" xml:id="UT22084-090-024-34">Andreas Doctor</editor>
+                <editor role="finalReviewer" xml:id="UT22084-090-024-103">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -29,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -42,7 +43,7 @@
                 <idno xml:id="UT22084-090-024"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-04-04</date>
+                <date>2024-07-09</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh580" type="text">
@@ -139,6 +140,15 @@
                 <change who="#line-tofte" when="2024-05-06T14:26:30.138Z" type="text-version" status="0.0.4" xml:id="UT22084-090-024-96">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-07-04T12:11:03.697Z" type="text-version" status="0.0.5" xml:id="UT22084-090-024-104">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-09T08:40:38.118Z" type="translation-status" status="1.a" xml:id="UT22084-090-024-107">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#sameer" when="2024-07-09T08:40:38.118Z" type="text-version" status="1.0.0" xml:id="UT22084-090-024-108">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -213,7 +223,7 @@
                             <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT AND REMOVE THE <p> ELEMENT-->
                             <p key="toh580">Note that there is a discrepancy among various databases
                                 for cataloging the Toh 936 version of this text within vol. 100 or
-                                101 of the Degé Kangyur. See Toh 936, <ref target="https://read.84000.co/translation/toh936.html#end-note-UT22084-090-024-88">note 2</ref>, for details.</p>
+                                101 of the Degé Kangyur. See Toh 936, <ptr target="toh936.html#UT22084-090-024-88"/>, for details.</p>
                             <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                         </note> No previous translation of this text into a language outside the
                         Tibetan sphere of influence is known. Meisezahl (1957) provides a diplomatic
@@ -443,6 +453,28 @@
                                     strong sense that such formulas or devices, when spoken or
                                     rehearsed in the mind, have extraordinary power to effect change
                                     in the world and in oneself.</p>
+                            </note>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss type="term" xml:id="UT22084-090-024-105">
+                            <term type="translationMain">giving</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary">*dāna</term>
+                            <term xml:lang="Bo-Ltn" n="1">sbyin pa</term>
+                            <term xml:lang="bo" n="1">སྦྱིན་པ།</term>
+                            <note type="definition">
+                                <p>The first of the six or ten perfections, often explained as the essential starting point and training for the practice of the others.</p>
+                            </note>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss type="term" xml:id="UT22084-090-024-106">
+                            <term type="translationMain">effort</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary">*vīrya</term>
+                            <term xml:lang="Bo-Ltn" n="1">brtson ’grus</term>
+                            <term xml:lang="bo" n="1">བརྩོན་འགྲུས།</term>
+                            <note type="definition">
+                                <p>The fourth of the six or ten perfections, this refers to a state of mind characterized by joyful persistence when engaging in virtuous activity.</p>
                             </note>
                         </gloss>
                     </item>
