--- a/translations/kangyur/placeholders/079-005_toh378-the_preeminence_of_varahi_a_sovereign_tantra.xml
+++ b/translations/kangyur/placeholders/079-005_toh378-the_preeminence_of_varahi_a_sovereign_tantra.xml
@@ -14,11 +14,11 @@
     <consultant role="projectManager" xml:id="UT22084-079-005-3">Dr. Andreas Doctor</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-079-005"/>
     <date/>
             </publicationStmt>
@@ -40,6 +40,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-079-005-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T11:41:23.99Z" type="translation-status" status="2.h" xml:id="UT22084-079-005-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T11:41:23.99Z" type="text-version" status="0.0.3" xml:id="UT22084-079-005-7">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
