--- a/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
+++ b/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
@@ -13,13 +13,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi yum shes rab kyi pha rol tu phyin ma yi ge gcig ma zhes bya ba</title>
                 <author role="translatorMain" xml:id="UT22084-034-011-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-034-011-5">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-034-011-12">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-034-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -55,6 +56,15 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-18T07:49:45.229Z" type="text-version" status="0.0.2" xml:id="UT22084-034-011-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T13:18:35.978Z" type="text-version" status="0.0.3" xml:id="UT22084-034-011-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T13:20:28.08Z" type="translation-status" status="2.g" xml:id="UT22084-034-011-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T13:20:28.08Z" type="text-version" status="0.0.4" xml:id="UT22084-034-011-15">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
