--- a/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-023-79">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -154,6 +154,9 @@
                 <change who="#sameer" when="2024-07-09T08:00:49.695Z" type="text-version" status="1.0.0" xml:id="UT22084-090-023-82">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#konchog" when="2024-07-09T15:43:12.223Z" type="text-version" status="1.0.1" xml:id="UT22084-090-023-83">
+                    <desc>Small proofing fixes throughout all sections.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -165,7 +168,7 @@
             <div type="summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-090-023-38"/>
-                <p tid="2">The text presents a simple <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign> in the form of a mnemonic expression consisting of
+                <p tid="2">The text presents a simple dhāraṇī in the form of a mnemonic expression consisting of
                     homages to the three bodies of a buddha, the six perfections, and their
                     underlying philosophical understanding. The benefits of the dhāraṇī are also
                     listed.</p>
@@ -185,19 +188,19 @@
                 <head type="introduction" tid="7">Introduction</head>
                 <div type="section" xml:id="UT22084-090-023-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-090-023-42"/>
-                    <p tid="9">The text consists of a series of homages—to Prajñāpāramitā and the
+                    <p tid="9">This text consists of a series of homages—to Prajñāpāramitā and the
                         Three Jewels—followed by the dhāraṇī itself and a list of its benefits. The
                         dhāraṇī consists of homages to the three bodies of a buddha leading into the
                         dhāraṇī proper, which is a mnemonic expression listing the six perfections
                         and concluding with a statement about the emptiness of all phenomena. It is
                         similar, in an abbreviated form, to a much longer and more inclusive mantra
                         given by Kulika Puṇḍarīka in his <foreign xml:lang="Sa-Ltn" type="term">Kālacakra</foreign> commentary, the <title xml:lang="en">Explanatory
-                            Commentary on the Abridged Kālacakra, King of Tantras, that Conforms to
-                            the Root Tantra in Twelve Thousand Verses called ‘Stainless
+                            Commentary on the Abridged Kālacakra, King of Tantras, That Conforms to
+                            the Root Tantra in Twelve Thousand Verses Called ‘Stainless
                             Light’</title> (<title xml:lang="Sa-Ltn">Vimala­prabhānāmamūla­tantrānusāriṇī­dvādaśasāhasrikālaghukāla­cakra­tantrarājaṭīkā</title>;
                             <title xml:lang="Bo-Ltn">bsdus pa’i rgyud kyi rgyal po dus kyi ’khor
                             lo’i ’grel bshad, rtsa ba’i rgyud kyi rjes su ’jug pa stong phrag bcu
-                            gnyis pa dri ma med pa’i ’od ces bya ba</title>; <ref target="https://read.84000.co/translation/toh1347.html" rend="pending">Toh 1347</ref>, fol. 143b.1–.3). If there is a connection between the
+                            gnyis pa dri ma med pa’i ’od ces bya ba</title>; <ref target="https://read.84000.co/translation/toh1347.html" rend="pending">Toh 1347</ref>, folios 143.b.1–3). If there is a connection between the
                         two texts beyond mere similarity, it remains unstated. No Sanskrit title is
                         provided for this text, and its title is given on the basis of the Tibetan
                         alone. <note place="end" xml:id="UT22084-090-023-43"> Of the four types of
@@ -209,14 +212,14 @@
                                 <foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇīs</foreign>,
                             which enable one to retain knowledge of words, that is, Dharma
                             teachings, that have been heard. Cf. <distinct>Grounds of
-                                Bodhisattvas</distinct> (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­bhūmi</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i sa</foreign>; <ref target="https://read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, fol. 144.a). A discussion of various
+                                Bodhisattvas</distinct> (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­bhūmi</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i sa</foreign>; <ref target="https://read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, folio 144.a). A discussion of various
                             classifications of dhāraṇīs is given in Pagel 2007.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-023-44"/>
                     <p tid="10">This translation of the text into English relied primarily on the
                         Degé recension while referring to variant readings in other recensions as
                         noted in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur
-                            ma</title>) and validated in the source texts—notably Narthang (N)—as
+                            ma</title>) and validated in the source texts—notably Narthang—as
                         well as the Stok Palace and Phukdrak recensions.<note place="end" xml:id="UT22084-090-023-68">
                             <p key="toh935">This text, Toh 935, and all those contained in this same
                                 volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are
@@ -244,7 +247,7 @@
                             <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                         </note> No previous translation of this text into a language outside the
                         Tibetan sphere of influence is known. Meisezahl (1957) provides a diplomatic
-                        edition of the <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign> as
+                        edition of the dhāraṇī as
                         found in the Linden Museum Tibetan collection. </p>
                 </div>
             </div>
@@ -288,8 +291,8 @@
                         overcome all bad views.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-023-53"/>
                     <trailer tid="20">This completes <ref key="toh579" cRef="F.203.b" type="folio" xml:id="UT22084-090-023-67"/>
-                        <title xml:lang="en">The Dhāraṇī of the Essence of the Six
-                            Perfections</title>.</trailer>
+                        “<title xml:lang="en">The Dhāraṇī of the Essence of the Six
+                            Perfections</title>.”</trailer>
                 </div>
             </div>
         </body>
@@ -322,14 +325,14 @@
                         pa), folios 194.b–195.a.</bibl>
                     <bibl xml:id="UT22084-090-023-58">
                         <title xml:lang="Bo-Ltn">pha rol tu phyin pa
-                            drug gi snying po’i gzungs</title>. Phug-brag Kangyur vol. 118 (rgyud,
+                            drug gi snying po’i gzungs</title>. Phukdrak Kangyur vol. 118 (rgyud,
                         wa), folios 150.a–150.b.</bibl>
                     <bibl xml:id="UT22084-090-023-59">Meisezahl, Richard O. “Die tibetischen
                         Handschriften und Drucke des Linden-Museums in Stuttgart.” <title xml:lang="de">Tribus</title> 7 (1957): 1–166, 103 (item 71 607, Nr.
                         1).</bibl>
                     <bibl xml:id="UT22084-090-023-60">Pagel, Ulrich. <title xml:lang="en">Mapping
                             the Path: Vajrapadas in Mahāyāna Literature</title>. Tokyo: The
-                        International Institute for Buddhist Studies (2007). </bibl>
+                        International Institute for Buddhist Studies, 2007. </bibl>
                 </div>
             </div>
             <div type="glossary" status="excluded">
