--- a/translations/kangyur/translations/090-024_toh580,936-the_dharani_for_retaining_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-024_toh580,936-the_dharani_for_retaining_the_six_perfections.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-024-103">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -149,6 +149,9 @@
                 <change who="#sameer" when="2024-07-09T08:40:38.118Z" type="text-version" status="1.0.0" xml:id="UT22084-090-024-108">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#konchog" when="2024-07-09T16:03:27.483Z" type="text-version" status="1.0.1" xml:id="UT22084-090-024-109">
+                    <desc>Small proofing fixes throughout all sections.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -160,7 +163,7 @@
             <div type="summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-090-024-36"/>
-                <p tid="2">The text presents a series of <foreign xml:lang="Sa-Ltn" type="term">dhāraṇīs</foreign> for the attainment of each of the perfections.</p>
+                <p tid="2">This text presents a series of dhāraṇīs for the attainment of each of the perfections.</p>
             </div>
             <div type="acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
@@ -177,7 +180,7 @@
                 <head type="introduction" tid="9">Introduction</head>
                 <div type="section" xml:id="UT22084-090-024-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-090-024-41"/>
-                    <p tid="11">The text presents a series of dhāraṇīs<note place="end" xml:id="UT22084-090-024-42"> Of the four types of dhāraṇīs described by
+                    <p tid="11">This text presents a series of dhāraṇīs<note place="end" xml:id="UT22084-090-024-42"> Of the four types of dhāraṇīs described by
                             the fourth-century scholar-yogi Asaṅga—Dharma dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">chos kyi gzungs</foreign>), meaning
                             dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">arthadhāraṇī</foreign>;
                                 <foreign xml:lang="Bo-Ltn" type="term">don gyi gzungs</foreign>),
@@ -185,11 +188,11 @@
                             dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­kṣāntilābhāya­dhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’ bzod pa ’thob par
                                 byed pa’i gzungs</foreign>)—this text falls into the category of
                                 <foreign xml:lang="Sa-Ltn" type="term">bodhisattva­kṣāntilābhāya­dhāraṇīs</foreign>, which enable one to
-                            which enable one to progress along the path through the acquisition of
+                            progress along the path through the acquisition of
                             the six perfections. Cf. <distinct>Grounds of Bodhisattvas</distinct>
-                                (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­bhūmi</foreign>;
+                                (<foreign xml:lang="Sa-Ltn" type="term">Bodhisattva­bhūmi</foreign>;
                                 <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i
-                                sa</foreign>; <ref target="https://read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, fol. 144.a). A discussion of various
+                                sa</foreign>; <ref target="https://read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, folio 144.a). A discussion of various
                             classifications of dhāraṇīs is given in Pagel 2007.</note> for the
                         attainment of each of the perfections, with no additional explanation.
                         Although a common theme, there are no obvious parallels with other texts in
@@ -199,8 +202,7 @@
                     <p tid="12">This translation of the text into English relied primarily on the
                         Degé recension while making reference to variant readings in other
                         recensions as noted in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe
-                            bsdur ma</title>) and validated in the source texts—notably Narthang
-                        (N)—as well as the Stok Palace and Phukdrak recensions.<note place="end" xml:id="UT22084-090-024-88">
+                            bsdur ma</title>) and validated in the source texts—notably Narthang—as well as the Stok Palace and Phukdrak recensions.<note place="end" xml:id="UT22084-090-024-88">
                             <p key="toh936">This text, Toh 936, and all those contained in this same
                                 volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are
                                 listed as being located in volume 100 of the Degé Kangyur by the
@@ -227,7 +229,7 @@
                             <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                         </note> No previous translation of this text into a language outside the
                         Tibetan sphere of influence is known. Meisezahl (1957) provides a diplomatic
-                        edition of the <foreign xml:lang="Sa-Ltn" type="term">dhāraṇīs</foreign>
+                        edition of the dhāraṇīs
                         found in the Linden Museum Tibetan collection. </p>
                 </div>
             </div>
@@ -245,7 +247,7 @@
                         Jewels.</p>
                     <lb/>
                     <p tid="20">By hearing this essence mantra of giving, even one time, one will
-                        obtain the perfection of giving.</p>
+                        obtain the perfection of giving:</p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-49"/>
                     <p rend="mantra" tid="21">
                         <mantra xml:lang="Sa-Ltn">oṃ namas tasyai<note place="end" xml:id="UT22084-090-024-50"> The Tibetan reads <foreign xml:lang="Sa-Ltn" type="term">*namastrai</foreign>.</note>
@@ -258,7 +260,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-52"/>
                     <p tid="22">By hearing this essence mantra of ethics, even one time, one will
-                        obtain the perfection of ethics.</p>
+                        obtain the perfection of ethics:</p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-53"/>
                     <p rend="mantra" tid="23">
                         <mantra xml:lang="Sa-Ltn">namaḥ sarvatathāgatānāṃ
@@ -281,7 +283,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-57"/>
                     <p tid="24">By hearing this essence mantra of patience, even one time, one will
-                        obtain the perfection of patience.</p>
+                        obtain the perfection of patience:</p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-58"/>
                     <p rend="mantra" tid="25">
                         <mantra xml:lang="Sa-Ltn">namaḥ sarvatathāgatāya
@@ -300,7 +302,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-62"/>
                     <p tid="26">By hearing this essence mantra of effort, even one time, one will
-                        obtain the perfection of effort.</p>
+                        obtain the perfection of effort:</p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-63"/>
                     <p rend="mantra" tid="27">
                         <mantra xml:lang="Sa-Ltn">namaḥ sarvatathāgatānām
@@ -315,7 +317,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-66"/>
                     <p tid="28">By hearing this essence mantra of meditative concentration, even one
-                        time, one will obtain the perfection of meditative concentration.</p>
+                        time, one will obtain the perfection of meditative concentration:</p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-67"/>
                     <p rend="mantra" tid="29">
                         <mantra xml:lang="Sa-Ltn">namaḥ sarvatathāgatānām | oṃ
@@ -326,7 +328,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-69"/>
                     <p tid="30">By hearing this essence mantra of wisdom, even one time, one will
-                        obtain the perfection of wisdom.</p>
+                        obtain the perfection of wisdom:</p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-70"/>
                     <p rend="mantra" tid="31">
                         <mantra xml:lang="Sa-Ltn">namas tathāgatāya
@@ -340,13 +342,14 @@
                                         phaṭ</foreign>.” Meisezahl’s version adds <foreign xml:lang="Sa-Ltn">mahākili curu curu mahācuru mili mili
                                         mahāmili tili tili mahātili dhume dhume mahādhume cale cale
                                         mahācale khiri khiri mahākhiri cili cili mahācili |
-                                        svāhā.</foreign>”</mantra>
+                                        svāhā.</foreign>
+                                </mantra>
                             </note>
                         </mantra>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-024-73"/>
-                    <trailer tid="32">This completes <title xml:lang="en">The Dhāraṇī for Retaining
-                            the Six Perfections</title>.</trailer>
+                    <trailer tid="32">This completes “<title xml:lang="en">The Dhāraṇī for Retaining
+                        the Six Perfections</title>.”</trailer>
                 </div>
             </div>
         </body>
@@ -360,7 +363,7 @@
                     <bibl xml:id="UT22084-090-024-74">
                         <title xml:lang="Bo-Ltn">pha rol tu phyin pa
                             drug gzung bar ’gyur ba’i gzungs</title>. Toh 580, Degé Kangyur vol. 90
-                        (rgyud, pha), folio 203b. </bibl>
+                        (rgyud, pha), folio 203.b. </bibl>
                     <bibl xml:id="UT22084-090-024-75">
                         <title xml:lang="Bo-Ltn">pha rol tu phyin pa
                             drug gzung bar ’gyur ba’i gzungs</title>. Toh 936, Degé Kangyur vol. 100
@@ -371,7 +374,7 @@
                         Edition of the Kangyur], krung go’i bod rig pa zhib ’jug ste gnas kyi bka’
                         bstan dpe sdur khang (The Tibetan Tripitaka Collation Bureau of the China
                         Tibetology Research Center). 108 volumes. Beijing: krung go’i bod rig pa dpe
-                        skrun khang (China Tibetology Publishing House, 2006–9), vol. 90, pp.
+                        skrun khang (China Tibetology Publishing House), 2006–9, vol. 90, pp.
                         654–56.</bibl>
                     <bibl xml:id="UT22084-090-024-77">
                         <title xml:lang="Bo-Ltn">pha rol tu phyin pa
@@ -386,7 +389,7 @@
                         9).</bibl>
                     <bibl xml:id="UT22084-090-024-80">Pagel, Ulrich. <title xml:lang="en">Mapping
                             the Path: Vajrapadas in Mahāyāna Literature</title>. Tokyo: The
-                        International Institute for Buddhist Studies (2007). </bibl>
+                        International Institute for Buddhist Studies, 2007. </bibl>
                 </div>
             </div>
             <div type="glossary" status="excluded">
@@ -432,7 +435,7 @@
                                     five object-determining mental states (<foreign xml:lang="Sa-Ltn">pañca­viṣaya­niyata</foreign>, <foreign xml:lang="Bo-Ltn">yul
                                     nges lnga</foreign>), alongside “will,” “resolve,” “mindfulness,” and
                                     “meditative stability.” Following Asaṅga’s <title xml:lang="Sa-Ltn">Abhidharma­samuccaya</title>,
-                                    Jamgon Kongtrul (TOK, Book 6, Pt. 2, p. 498), defines <foreign xml:lang="Sa-Ltn">prajñā</foreign> as
+                                    Jamgon Kongtrul (TOK, Book 6, Pt. 2, p. 498) defines <foreign xml:lang="Sa-Ltn">prajñā</foreign> as
                                     “the discriminative awareness that analyzes specific and general
                                     characteristics.”</p>
                             </note>
