--- a/translations/kangyur/translations/090-027_toh583,939-the_dharani_for_retaining_the_perfection_of_wisdom_in_a_hundred_thousand_lines.xml
+++ b/translations/kangyur/translations/090-027_toh583,939-the_dharani_for_retaining_the_perfection_of_wisdom_in_a_hundred_thousand_lines.xml
@@ -18,7 +18,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-027-94">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -138,6 +138,9 @@
                 <change who="#sameer" when="2024-07-09T08:48:13.853Z" type="text-version" status="1.0.0" xml:id="UT22084-090-027-97">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#konchog" when="2024-07-09T17:01:50.833Z" type="text-version" status="1.0.1" xml:id="UT22084-090-027-98">
+                    <desc>Small proofing fixes throughout all sections.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -149,7 +152,7 @@
             <div type="summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-090-027-42"/>
-                <p tid="2">The text presents two <foreign xml:lang="Sa-Ltn" type="term">dhāraṇīs</foreign> for the retention of <title xml:lang="en">The Perfection of Wisdom Sūtra in One Hundred Thousand
+                <p tid="2">This text presents two dhāraṇīs for the retention of <title xml:lang="en">The Perfection of Wisdom Sūtra in One Hundred Thousand
                     Lines</title>.</p>
             </div>
             <div type="acknowledgment">
@@ -164,8 +167,8 @@
                 <head type="introduction" tid="7">Introduction</head>
                 <div type="section" xml:id="UT22084-090-027-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-090-027-46"/>
-                    <p tid="9">The text presents two dhāraṇīs<note place="end" xml:id="UT22084-090-027-47"> The four types of dhāraṇīs described by the fourth-century scholar-yogi Asaṅga—Dharma dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">chos kyi gzungs</foreign>), meaning dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">arthadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">don gyi gzungs</foreign>), mantra dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">mantradhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">gsang sngags kyi gzungs</foreign>), and bodhisattva patience dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­kṣāntilābhāya­dhāraṇī</foreign>;
-                                <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’ bzod pa ’thob par byed pa’i gzungs</foreign>)—this text fall into the category of <foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇīs</foreign>, which enable one to retain knowledge of words—Dharma teachings—that have been heard. Cf. <distinct>Grounds of Bodhisattvas </distinct> (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­bhūmi</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i sa</foreign>; <ref target="read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, fol. 144.a). A discussion of various classifications of <foreign xml:lang="Sa-Ltn" type="term">dhāraṇīs</foreign> is given in Pagel 2007.</note> for the
+                    <p tid="9">This text presents two dhāraṇīs<note place="end" xml:id="UT22084-090-027-47"> Of the four types of dhāraṇīs described by the fourth-century scholar-yogi Asaṅga—Dharma dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">chos kyi gzungs</foreign>), meaning dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">arthadhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">don gyi gzungs</foreign>), mantra dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">mantradhāraṇī</foreign>; <foreign xml:lang="Bo-Ltn" type="term">gsang sngags kyi gzungs</foreign>), and bodhisattva patience dhāraṇīs (<foreign xml:lang="Sa-Ltn" type="term">bodhisattva­kṣāntilābhāya­dhāraṇī</foreign>;
+                                <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’ bzod pa ’thob par byed pa’i gzungs</foreign>)—this text falls into the category of <foreign xml:lang="Sa-Ltn" type="term">dharmadhāraṇīs</foreign>, which enable one to retain knowledge of words—Dharma teachings—that have been heard. Cf. <distinct>Grounds of Bodhisattvas </distinct> (<foreign xml:lang="Sa-Ltn" type="term">Bodhisattva­bhūmi</foreign>; <foreign xml:lang="Bo-Ltn" type="term">byang chub sems dpa’i sa</foreign>; <ref target="read.84000.co/translation/toh4037.html" rend="pending">Toh 4037</ref>, folio 144.a). A discussion of various classifications of dhāraṇīs is given in Pagel 2007.</note> for the
                         retention of <title xml:lang="en">The Perfection of Wisdom Sūtra in One Hundred Thousand Lines</title>.<note place="end" xml:id="UT22084-090-027-48"> No Sanskrit title is provided for this text,
                             and its title is given on the basis of the Tibetan alone. See <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title> (<ref target="https://read.84000.co/translation/toh8.html">Toh 8</ref>).</note> The first of these dhāraṇīs does not appear to be contained in any canonical tantra, although it is shared in common with
                             <title xml:lang="en">The Dhāraṇī of the Eight Thousand Line Perfection of Wisdom Sūtra</title>.<note place="end" xml:id="UT22084-090-027-49">
@@ -173,12 +176,12 @@
                                 gzungs</title>. <ref target="https://read.84000.co/translation/toh576.html" rend="pending">Toh 576</ref>.</note> Regarding the second dhāraṇī, a mantra closely resembling it is found in
                             <title xml:lang="en">The Ornament for the Vajra Essence Tantra</title>.<note place="end" xml:id="UT22084-090-027-50">
                             <mantra xml:lang="Sa-Ltn">oṃ prajñā svāhā | oṃ śruti smṛti vijaye
-                                svāhā</mantra>. <title xml:lang="Sa-Ltn">Vajra­maṇḍālamkāra</title>; <ref target="https://read.84000.co/translation/toh490.html" rend="pending">Toh 490</ref>, fol. 54.a.</note> In
+                                svāhā</mantra>. <title xml:lang="Sa-Ltn">Vajra­maṇḍālamkāra</title>; <ref target="https://read.84000.co/translation/toh490.html" rend="pending">Toh 490</ref>, folio 54.a.</note> In
                         addition, this dhāraṇī text is reproduced in its entirety in Abhayākāragupta’s <title xml:lang="en">Main Path to Awakening</title>.<note place="end" xml:id="UT22084-090-027-63">
-                            <title xml:lang="Sa-Ltn">Bodhipaddhati</title>; <title xml:lang="Bo-Ltn">Byang chub kyi gzhung lam zhes bya ba</title>; <ref target="https://read.84000.co/translation/toh3766.html" rend="pending">Toh 3766</ref>, fol. 120b.</note>
+                            <title xml:lang="Sa-Ltn">Bodhipaddhati</title>; <title xml:lang="Bo-Ltn">byang chub kyi gzhung lam zhes bya ba</title>; <ref target="https://read.84000.co/translation/toh3766.html" rend="pending">Toh 3766</ref>, folio 120.b.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-027-62"/>
-                    <p tid="20"> This translation of the text into English relied primarily on the Degé recension while making reference to variant readings in other recensions as noted in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and validated in the source texts—notably Narthang (N).<note place="end" xml:id="UT22084-090-027-82">
+                    <p tid="20"> This translation of the text into English relied primarily on the Degé recension while making reference to variant readings in other recensions as noted in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and validated in the source texts—notably Narthang.<note place="end" xml:id="UT22084-090-027-82">
                             <p key="toh939">This text, Toh 939, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are listed as being located in volume 100 of the Degé
                                 Kangyur by the Buddhist Digital Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the digital input version displayed by the 84000
                                 Reading Room—list this work as being located in volume 101. This discrepancy is partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section
@@ -209,7 +212,7 @@
                     <milestone unit="chunk" xml:id="UT22084-090-027-68"/>
                     <p rend="mantra" tid="28">
                         <mantra xml:lang="Sa-Ltn">tadyathā | oṃ munidharme saṃgrahadharme vimuktidharme sadā anugrahadharme vaiśravaṇa parivartata | dharme sarvakārya paripramāṇadharme
-                            samatāparivartanadharme svāhā |<note place="end" xml:id="UT22084-090-027-69"> This <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign> is difficult to translate but can be tentatively
+                            samatāparivartanadharme svāhā |<note place="end" xml:id="UT22084-090-027-69"> This dhāraṇī is difficult to translate but can be tentatively
                                 rendered into English as follows: <mantra xml:lang="en">“It is thus: <foreign xml:lang="Sa-Ltn">oṃ</foreign>. O Vaiśravaṇa, turn the wheel of the Dharma of the Sage, the Dharma of
                                     summation, the Dharma of liberation, and the Dharma of constant benefit. This is the Dharma of complete activity, the Dharma beyond all measure, the Dharma of protecting all equally.
                                     May auspiciousness abound.”</mantra>
@@ -225,10 +228,10 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-027-72"/>
                     <p tid="30">
-                        <note place="end" xml:id="UT22084-090-027-73"> In Meisezahl’s manuscript, there is an additional <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>, which reads <mantra xml:lang="Sa-Ltn">oṃ prajñāpāramitā bala svāhā</mantra>.</note>By taking up this dhāraṇī, one will retain <title xml:lang="en">The Perfection of Wisdom in a Hundred Thousand
+                        <note place="end" xml:id="UT22084-090-027-73"> In Meisezahl’s manuscript, there is an additional dhāraṇī, which reads <mantra xml:lang="Sa-Ltn">oṃ prajñāpāramitā bala svāhā</mantra>.</note>By taking up this dhāraṇī, one will retain <title xml:lang="en">The Perfection of Wisdom in a Hundred Thousand
                         Lines</title>.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-027-74"/>
-                    <trailer tid="31">This completes <title xml:lang="en">The Dhāraṇī for Retaining the Perfection of Wisdom in a Hundred Thousand Lines</title>.</trailer>
+                    <trailer tid="31">This completes “<title xml:lang="en">The Dhāraṇī for Retaining the Perfection of Wisdom in a Hundred Thousand Lines</title>.”</trailer>
                 </div>
             </div>
         </body>
@@ -251,7 +254,7 @@
                         Tibetology Publishing House), 2006–9, vol. 90, pp. 661–62. </bibl>
                     <bibl xml:id="UT22084-090-027-78">Meisezahl, Richard O. “Die tibetischen Handschriften und Drucke des Linden-Museums in Stuttgart.” <title xml:lang="de">Tribus</title> 7 (1957): 1–166, 101–2 (item 71
                         566, Nr. 2).</bibl>
-                    <bibl xml:id="UT22084-090-027-79">Pagel, Ulrich. <title xml:lang="en">Mapping the Path: Vajrapadas in Mahāyāna Literature</title>. Tokyo: The International Institute for Buddhist Studies (2007).
+                    <bibl xml:id="UT22084-090-027-79">Pagel, Ulrich. <title xml:lang="en">Mapping the Path: Vajrapadas in Mahāyāna Literature</title>. Tokyo: The International Institute for Buddhist Studies, 2007.
                     </bibl>
                 </div>
             </div>
